--- a/src/components/DashboardPage/DashboardPage.css
+++ b/src/components/DashboardPage/DashboardPage.css
@@ -55,12 +55,23 @@ h2 {
 }
 
 .delete-button {
-  background-color: #f44336; /* Red background color, you can change this */
+  background-color: #f44336;
   color: white;
   border: none;
   border-radius: 4px;
   padding: 6px 12px;
-  margin-left: 10px; /* Add margin to separate the button from the event text */
+  margin-left: 10px; 
   cursor: pointer;
-  float: right; /* Position the button to the right of the event */
+  float: right;
+}
+
+.edit-button{
+  background-color: #0d10336a;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 6px 12px;
+  margin-left: 10px; 
+  cursor: pointer;
+  float: right;
 }
