--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -13,7 +13,7 @@
 }
 
 .landing-container button {
-  background-color: #4CAF50; /* Green */
+  background-color: #4CAF50; 
   border: none;
   color: white;
   padding: 10px 20px;
@@ -25,4 +25,4 @@
   cursor: pointer;
 }
 
-/* Additional style for the RegisterForm if necessary */
+
